リンク追加

--- a/Omiyage.ipynb
+++ b/Omiyage.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Omiyage.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +13,22 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YU7c4pW62TEz",
+        "colab_type": "text"
+      },
+      "source": [
+        "おみやげ\n",
+        "\n",
+        "モデル：\n",
+        "https://drive.google.com/file/d/1u2ZOt91xIzyBsm2cimTxSYTVRJiE63pV/view?usp=sharing\n",
+        "\n",
+        "テスト画像：\n",
+        "https://drive.google.com/drive/folders/16IkA5uNnP0WjD_kgbNoPG5Q4GyAnFP96?usp=sharing"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
