--- a/Omiyage.ipynb
+++ b/Omiyage.ipynb
@@ -55,7 +55,8 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
-        "from keras.preprocessing.image import img_to_array, load_img"
+        "from keras.preprocessing.image import img_to_array, load_img\n",
+        "import os"
       ],
       "execution_count": 0,
       "outputs": []
